# beatcut

./: .gitignore  index.html  package-lock.json  package.json
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: beat_detection.rs  hyperframes.rs  lib.rs  main.rs  video_processor.rs
src/components/: Waveform.tsx
