[package]
name = "beatcut"
version = "0.1.0"
description = "BeatCut - AI-powered beat-sync video editor for Mac"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "beatcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

# Audio processing
hound = "3.5"

# Temp files
dirs = "6"
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
